# wiki-search-engine

./: .gitignore
backend/: Cargo.toml
backend/src/: create_embedding.py  data_to_elastic.py  format_wiki_text.py  main.rs
batch/: Dockerfile
batch/notebook/: Untitled.ipynb
batch/src/: create_embedding.py  data_to_elastic.py  format_wiki_text.py
elastic_cluster/: .env  Dockerfile  docker-compose.yml
