[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
elasticsearch = "8.4.0-alpha.1"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "*", features = ["full"] }